--- a/src/styles/themes/dark.css
+++ b/src/styles/themes/dark.css
@@ -109,4 +109,7 @@
   --st-loading-skeleton-bg-color: var(--st-gray-700);
   --st-chart-color: var(--st-blue-400);
   --st-chart-fill-color: var(--st-blue-400);
+
+  /* Drag and drop colors */
+  --st-drag-separator-color: var(--st-blue-400);
 }
