--- a/src/styles/themes/sky.css
+++ b/src/styles/themes/sky.css
@@ -109,4 +109,7 @@
   --st-loading-skeleton-bg-color: var(--st-blue-200);
   --st-chart-color: var(--st-blue-900);
   --st-chart-fill-color: var(--st-blue-900);
+
+  /* Drag and drop colors */
+  --st-drag-separator-color: var(--st-blue-600);
 }
